--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -158,7 +158,6 @@
 
 .upcoming__movies_card_col {
   display: inline-block;
-  margin: 0px 7px;
 }
 
 .upcoming__movies_card {
