--- a/src/pages/ManageMovie/ManageMovie.module.css
+++ b/src/pages/ManageMovie/ManageMovie.module.css
@@ -107,7 +107,6 @@
     } */
 
 .upcoming__movies_card_row {
-  white-space: nowrap;
   overflow-x: hidden;
 }
 
